// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack vault os.direct given: [case1] repo with vault os.direct configured when: [t0] keyrack get --for repo --json (without unlock) then: stdout matches snapshot 1`] = `
[
  {
    "fix": "rhx keyrack unlock --env test --key DIRECT_TEST_KEY",
    "message": "credential 'testorg.test.DIRECT_TEST_KEY' is locked. unlock it first.",
    "slug": "testorg.test.DIRECT_TEST_KEY",
    "status": "locked",
  },
]
`;

exports[`keyrack vault os.direct given: [case1] repo with vault os.direct configured when: [t1] rhx keyrack get --for repo --json (without unlock) then: stdout matches snapshot 1`] = `
[
  {
    "fix": "rhx keyrack unlock --env test --key DIRECT_TEST_KEY",
    "message": "credential 'testorg.test.DIRECT_TEST_KEY' is locked. unlock it first.",
    "slug": "testorg.test.DIRECT_TEST_KEY",
    "status": "locked",
  },
]
`;

exports[`keyrack vault os.direct given: [case2] repo with single key configured when: [t0] keyrack get --key DIRECT_TEST_KEY --json (without unlock) then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack unlock --env test --key DIRECT_TEST_KEY",
  "message": "credential 'testorg.test.DIRECT_TEST_KEY' is locked. unlock it first.",
  "slug": "testorg.test.DIRECT_TEST_KEY",
  "status": "locked",
}
`;

exports[`keyrack vault os.direct given: [case2] repo with single key configured when: [t1] keyrack get --key DIRECT_TEST_KEY (human readable, without unlock) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.DIRECT_TEST_KEY
      ├─ status: locked 🔒
      └─ [2mtip: rhx keyrack unlock --env test --key DIRECT_TEST_KEY[0m

"
`;

exports[`keyrack vault os.direct given: [case3] repo with vault configured when: [t1] get --key DIRECT_TEST_KEY after unlock then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "test",
    "key": {
      "grade": {
        "duration": "permanent",
        "protection": "plaintext",
      },
      "secret": "direct-test-key-abc123",
    },
    "org": "testorg",
    "slug": "testorg.test.DIRECT_TEST_KEY",
    "source": {
      "mech": "REPLICA",
      "vault": "os.direct",
    },
  },
  "status": "granted",
}
`;

exports[`keyrack vault os.direct given: [case4] keyrack list when: [t0] keyrack list then: stdout matches snapshot 1`] = `
"
🔐 keyrack list
   └─ testorg.test.DIRECT_TEST_KEY
      ├─ env: test
      ├─ org: testorg
      ├─ mech: REPLICA
      └─ vault: os.direct
"
`;

exports[`keyrack vault os.direct given: [case4] keyrack list when: [t1] keyrack list --json then: stdout matches snapshot 1`] = `
{
  "testorg.test.DIRECT_TEST_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.test.DIRECT_TEST_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
}
`;

exports[`keyrack vault os.direct given: [case5] findsert semantics when: [t0] set key that already exists with same attrs then: stdout matches snapshot 1`] = `
{
  "createdAt": "2026-01-01T00:00:00.000Z",
  "env": "test",
  "exid": null,
  "maxDuration": null,
  "mech": "REPLICA",
  "org": "testorg",
  "slug": "testorg.test.DIRECT_TEST_KEY",
  "updatedAt": "2026-01-01T00:00:00.000Z",
  "vault": "os.direct",
  "vaultRecipient": null,
}
`;
